Atualiza a documentação Gera o novo código com o swegger
