# models/credenciais.go
@@ -1,0 +1,101 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Credenciais credenciais
+// swagger:model Credenciais
+type Credenciais struct {
+
+	// Senha de acesso
+	// Required: true
+	// Max Length: 200
+	// Min Length: 1
+	Senha *string `json:"senha"`
+
+	// Username, email ou código do usuário
+	// Required: true
+	// Max Length: 200
+	// Min Length: 1
+	Usuario *string `json:"usuario"`
+}
+
+// Validate validates this credenciais
+func (m *Credenciais) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateSenha(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUsuario(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Credenciais) validateSenha(formats strfmt.Registry) error {
+
+	if err := validate.Required("senha", "body", m.Senha); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("senha", "body", string(*m.Senha), 1); err != nil {
+		return err
+	}
+
+	if err := validate.MaxLength("senha", "body", string(*m.Senha), 200); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Credenciais) validateUsuario(formats strfmt.Registry) error {
+
+	if err := validate.Required("usuario", "body", m.Usuario); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("usuario", "body", string(*m.Usuario), 1); err != nil {
+		return err
+	}
+
+	if err := validate.MaxLength("usuario", "body", string(*m.Usuario), 200); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Credenciais) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Credenciais) UnmarshalBinary(b []byte) error {
+	var res Credenciais
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
