# restapi/operations/auth/valida_credenciais_responses.go
@@ -1,0 +1,106 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package auth
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/hallanneves/autenticador/models"
+)
+
+// ValidaCredenciaisOKCode is the HTTP code returned for type ValidaCredenciaisOK
+const ValidaCredenciaisOKCode int = 200
+
+/*ValidaCredenciaisOK Status 200, Success
+
+swagger:response validaCredenciaisOK
+*/
+type ValidaCredenciaisOK struct {
+}
+
+// NewValidaCredenciaisOK creates ValidaCredenciaisOK with default headers values
+func NewValidaCredenciaisOK() *ValidaCredenciaisOK {
+
+	return &ValidaCredenciaisOK{}
+}
+
+// WriteResponse to the client
+func (o *ValidaCredenciaisOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// ValidaCredenciaisUnauthorizedCode is the HTTP code returned for type ValidaCredenciaisUnauthorized
+const ValidaCredenciaisUnauthorizedCode int = 401
+
+/*ValidaCredenciaisUnauthorized Status 401, StatusUnauthorized
+
+swagger:response validaCredenciaisUnauthorized
+*/
+type ValidaCredenciaisUnauthorized struct {
+}
+
+// NewValidaCredenciaisUnauthorized creates ValidaCredenciaisUnauthorized with default headers values
+func NewValidaCredenciaisUnauthorized() *ValidaCredenciaisUnauthorized {
+
+	return &ValidaCredenciaisUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *ValidaCredenciaisUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// ValidaCredenciaisInternalServerErrorCode is the HTTP code returned for type ValidaCredenciaisInternalServerError
+const ValidaCredenciaisInternalServerErrorCode int = 500
+
+/*ValidaCredenciaisInternalServerError Status 500, StatusInternalServerError
+
+swagger:response validaCredenciaisInternalServerError
+*/
+type ValidaCredenciaisInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Erro `json:"body,omitempty"`
+}
+
+// NewValidaCredenciaisInternalServerError creates ValidaCredenciaisInternalServerError with default headers values
+func NewValidaCredenciaisInternalServerError() *ValidaCredenciaisInternalServerError {
+
+	return &ValidaCredenciaisInternalServerError{}
+}
+
+// WithPayload adds the payload to the valida credenciais internal server error response
+func (o *ValidaCredenciaisInternalServerError) WithPayload(payload *models.Erro) *ValidaCredenciaisInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the valida credenciais internal server error response
+func (o *ValidaCredenciaisInternalServerError) SetPayload(payload *models.Erro) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ValidaCredenciaisInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
